@@ -52,6 +52,7 @@ import java.util.*;
  */
 public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer> {
     private static final Logger LOGGER = LoggerFactory.getLogger(ElementLibrary.class);
+    private static final long MIN_RESCAN_INTERVAL = 5000;
 
     /**
      * @return the additional library path
@@ -82,6 +83,7 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
     private ElementLibraryFolder custom;
     private File rootLibraryPath;
     private Exception exception;
+    private long lastRescanTime;
 
     /**
      * Creates a new instance.
@@ -117,7 +119,7 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
                         .add(Probe.DESCRIPTION)
                         .add(new LibraryNode(Lang.get("lib_more"))
                                 .add(LightBulb.DESCRIPTION)
-                                .add(RealLED.DESCRIPTION)
+                                .add(Out.POLARITYAWARELEDDESCRIPTION)
                                 .add(Out.SEVENDESCRIPTION)
                                 .add(Out.SEVENHEXDESCRIPTION)
                                 .add(Out.SIXTEENDESCRIPTION)
@@ -396,11 +398,15 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
             if (rootLibraryPath == null)
                 throw new ElementNotFoundException(Lang.get("err_fileNeedsToBeSaved"));
 
-            rescanFolder();
+            LOGGER.debug("could not find " + elementName);
 
-            node = map.get(elementName);
-            if (node != null)
-                return node.getDescription();
+            if (System.currentTimeMillis() - lastRescanTime > MIN_RESCAN_INTERVAL) {
+                rescanFolder();
+
+                node = map.get(elementName);
+                if (node != null)
+                    return node.getDescription();
+            }
         } catch (IOException e) {
             throw new ElementNotFoundException(Lang.get("msg_errorImportingModel_N0", elementName), e);
         }
@@ -408,7 +414,7 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
         throw new ElementNotFoundException(Lang.get("err_element_N_notFound", elementName));
     }
 
-    private void rescanFolder() throws IOException {
+    private void rescanFolder() {
         LOGGER.debug("rescan folder");
         LibraryNode cn = custom.scanFolder(rootLibraryPath, false);
 
@@ -416,6 +422,7 @@ public class ElementLibrary implements Iterable<ElementLibrary.ElementContainer>
 
         if (cn != null)
             fireLibraryChanged(cn);
+        lastRescanTime = System.currentTimeMillis();
     }
 
     /**
